[package]
name = "rust-parquet"
version = "0.1.0"
authors = ["Vadim Chekan <kot.begemot@gmail.com>"]

[dependencies]
snap = "0.2.4"
byteorder = "1.1.0"
#thrift = "0.0.4"
#thrift = {git = "https://github.com/vchekan/thrift"}
thrift = { path = "../thrift/lib/rs"}
ordered-float = "0.5.0"
try_from = "0.2.2"